<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/PlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginBottom="16dp"
            android:text="@string/start_game_string" />

        <Button
            android:id="@+id/ScoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/Player1Avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/Player1EnterName"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/confirm_player1_text" />

                <Button
                    android:id="@+id/Player1ConfirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_player_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/Player2Avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/Player2EnterName"
                    android:layout_width="wrap_content"
                    android:layout_height="77dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/confirm_player2_text" />

                <Button
                    android:id="@+id/Player2ConfirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_player_button" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>